<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.myapplication.DoctorDashboardActivity">

    <!-- Welcome Text -->
    <TextView
        android:id="@+id/doctorWelcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome, Doctor!"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <!-- Sign-in/Registration Radio Group -->
    <RadioGroup
        android:id="@+id/signInRegisterRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/doctorWelcomeText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/signInRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doctor_sign_in"
            android:checked="true" />

        <RadioButton
            android:id="@+id/registerRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doctor_register" />
    </RadioGroup>

    <!-- Login UI Elements -->
    <LinearLayout
        android:id="@+id/loginSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/signInRegisterRadioGroup">

        <EditText
            android:id="@+id/doctorIdEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/doctor_id_login" />

        <EditText
            android:id="@+id/doctorSsnEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/doctor_ssn_login" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login" />
    </LinearLayout>

    <!-- Registration UI Elements (Initially hidden) -->
    <LinearLayout
        android:id="@+id/registrationSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/signInRegisterRadioGroup">

        <EditText
            android:id="@+id/doctorRegistrationNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/doctor_name_register" />

        <EditText
            android:id="@+id/doctorRegistrationIdEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/doctor_id_register" />

        <EditText
            android:id="@+id/doctorRegistrationSsnEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/doctor_ssn_register" />

        <EditText
            android:id="@+id/doctorRegistrationSpecialtyEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/doctor_specialty_register" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
